Initial commit: 27 first check

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ USER=postgres
 PASSWORD=160407
 HOST=localhost
 PORT=5432
+SECRET_KEY=123456
+
+EMAIL_HOST = 'smtp.yandex.ru'
+EMAIL_PORT = 465
+EMAIL_HOST_USER = "rilz.snep@yandex.ru"
+EMAIL_HOST_PASSWORD = "rrwxamgzxhmzacer"
